@@ -162,3 +162,22 @@ F(scrolleffect)
 F(scrolltype)
 F(scrolllevel)
 F(scrolllevel2)
+F(svcorruption)
+F(purity)
+F(backstabdmg)
+F(dsmitigation)
+F(heroic_str)
+F(heroic_int)
+F(heroic_wis)
+F(heroic_agi)
+F(heroic_dex)
+F(heroic_sta)
+F(heroic_cha)
+F(heroic_mr)
+F(heroic_fr)
+F(heroic_cr)
+F(heroic_dr)
+F(heroic_pr)
+F(heroic_svcorrup)
+F(healamt)
+F(spelldmg)
