@@ -1,9 +1,18 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 ==06/15/2009==
+Trevius: SoF - The following fields now show up on items that have values set for them, but the stats are not actually used by the server yet:
+	       svcorruption, purity, backstabdmg, dsmitigation, heroic_str, heroic_int, heroic_wis, heroic_agi, heroic_dex, heroic_sta
+	       heroic_cha, heroic_mr, heroic_fr, heroic_cr, heroic_dr, heroic_pr, heroic_svcorrup, healamt, and spelldmg
+Trevius: Fix for compile error; should have been fixed already *hint*.
 Trevius: More tweaks to make illusions work better with features and armor/helm graphics
 Trevius: Added alias #rf for the #randomfeatures command. Note that the feature changes are not permanent.
 Trevius: Changed the default way of loading spells to now load from the spells_new table instead of from the spells_us.txt file.
+
+Required SQL: \utils\sql\svn\665_heroic_resists.sql
+
+Recommended SQL: (This is recommended for databases that don't stay current with PEQ or are custom)
+UPDATE items SET backstabdmg = damage WHERE backstabdmg = 0 AND itemtype = 2;
 
 Warning: If you do not have a spells_new table yet, you must create one and load spells into it or zones will crash when loading in.
 	 To create the spells_new table, use the SQL from \utils\sql\svn\230_spells_table.sql
